# umaskd

./: AUTHORS  ChangeLog  README  README.md  configure.ac
src/: Makefile.am  inotify.hh  main.cc  umaskd.conf
